--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ footer {
 }
 
 .contact-whatsapp {
-  max-width: 350px; /* sau cât vrei */
+  max-width: 400px; /* sau cât vrei */
   margin: 20px auto;
   text-align: center;
   font-family: Arial, sans-serif;
@@ -227,7 +227,7 @@ footer {
   color: white;
   text-decoration: none;
   font-weight: bold;
-  border-radius: 30px;
+  border-radius: 10px;
   margin-bottom: 15px;
   transition: background 0.3s;
 }
@@ -248,7 +248,7 @@ footer {
   width: 100%;
   height: 200px;
   object-fit: cover;
-  position: absolute;
+  position: relative;
   opacity: 0;
   transition: opacity 1s ease-in-out;
   top: 0;
@@ -261,7 +261,7 @@ footer {
 }
 
 .whatsapp-slider img {
-  margin: 10px;
+  margin: 20px;
 }
 .whatsapp-slider img {
   display: none;
